# ai-projects-template

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .env  Makefile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/: __init__.py  config.py
